examples/test/testpolicy16078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16078
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key32: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value20
          key38: value44
      podSelector:
        matchLabels:
          key40: value41
          key6: value19
          key27: value5
